update(backend): add more seed data
